--- a/styles.css
+++ b/styles.css
@@ -9,28 +9,14 @@ body {
 
 /* Header and Navigation */
 header {
-    background-color: #a60aab;
+    background: linear-gradient(to right, #3498db, #8e44ad);
     padding: 1rem 0;
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 1000;
-    background: linear-gradient(to right, #3498db, #8e44ad); /* Initial Gradient */
-    animation: gradient-animation 10s infinite alternate; /* Gradient animation */
 }
 
-
-@keyframes gradient-animation {
-    0% {
-        background: linear-gradient(to right, #3498db, #8e44ad); /* Blue to Purple */
-    }
-    50% {
-        background: linear-gradient(to right, #8e44ad, #3498db); /* Purple to Blue */
-    }
-    100% {
-        background: linear-gradient(to right, #3498db, #8e44ad); /* Blue to Purple */
-    }
-}
 .top-menu {
     display: flex;
     justify-content: space-between;
@@ -66,6 +52,39 @@ header {
     background-color: #34495e;
 }
 
+.burger-menu {
+    display: none;
+    font-size: 2rem;
+    color: #ecf0f1;
+    cursor: pointer;
+}
+
+@media (max-width: 768px) {
+    .top-menu ul {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        background-color: #8e44ad;
+        text-align: center;
+    }
+
+    .top-menu ul.active {
+        display: flex;
+    }
+
+    .top-menu ul li {
+        margin: 0;
+        padding: 1rem 0;
+    }
+
+    .burger-menu {
+        display: block;
+    }
+}
+
 /* Main Content */
 main {
     max-width: 1200px;
@@ -79,7 +98,6 @@ main {
     padding: 20px;
     /* Other styles for .home-container */
 }
-
 /* index style */
 .index-content {
     position: absolute;
@@ -126,6 +144,18 @@ p {
     opacity: 1;
 }
 
+/* New Gallery content */
+.content {
+    padding-top: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-bottom: 40px;
+}
+h1 {
+    text-align: center;
+    color: #333;
+}
+
 /* New content Animatic*/
 .content-a {
     padding-top: 80px;
@@ -139,9 +169,14 @@ h1 {
 }
 .animatic-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     padding: 20px;
+}
+@media (max-width: 768px) {
+    .animatic-grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 .animatic-item {
     background-color: white;
@@ -187,22 +222,17 @@ h1 {
 
 /* End New content Animatic */
 
-/* New Gallery content */
-.content {
-    padding-top: 20px;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding-bottom: 40px;
-}
-h1 {
-    text-align: center;
-    color: #333;
-}
 .gallery-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     padding: 20px;
+}
+@media (max-width: 768px) {
+    .gallery-grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 .gallery-item {
     position: relative;
@@ -245,14 +275,17 @@ h1 {
     transform: translate(-50%, -50%);
     text-align: center;
 }
+
 /* Bio Page */
 
 .bio-content {
-    padding-top: 80px;
+    padding-top: 15px;
     max-width: 800px;
     margin: 0 auto;
     padding-bottom: 40px;
+    text-align: center;
 }
+
 h1 {
     text-align: center;
     color: #333;
@@ -273,6 +306,12 @@ h1 {
     object-fit: cover;
     margin-bottom: 20px;
     border: 5px solid #00bbff;
+}
+@media (max-width: 768px) {
+    .bio-content {
+        padding-top: 30px;
+        text-align: center;
+    }
 }
 .bio-text {
     text-align: justify;
@@ -301,161 +340,12 @@ h1 {
     border-radius: 10px;
     transition: width 1s ease-in-out;
 }
-/* .bio-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    padding: 0 2rem;
-}
-
-.profile-pic {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-bottom: 2rem;
-    margin: 5rem auto 2rem;
-    padding: 0 2rem;
-}
-
-.cv {
-    max-width: 600px;
-    text-align: left;
-}
-
-.cv-separator {
-    border-top: 1px solid #ccc;
-    margin-top: 2rem;
-    padding-bottom: 4rem;
-} */
-
-/* Old Contact Page */
-
-/* .contact-form {
-    max-width: 500px;
-    margin: 0 auto;
-}
-
-.contact-form input,
-.contact-form textarea {
-    width: 100%;
-    padding: 0.5rem;
-    margin-bottom: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-.contact-form button {
-    background-color: #2c3e50;
-    color: #ecf0f1;
-    padding: 0.5rem 1rem;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.contact-form button:hover {
-    background-color: #34495e;
-} */ 
-
-/* New Contact Page */
-.contact-container {
-    background-color: white;
-    border-radius: 10px;
-    padding: 40px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-h1 {
-    text-align: center;
-    color: #333;
-}
-.contact-form {
-    display: grid;
-    gap: 20px;
-}
-.form-group {
-    display: flex;
-    flex-direction: column;
-}
-label {
-    margin-bottom: 5px;
-    color: #555;
-}
-input, textarea {
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    font-size: 1em;
-}
-textarea {
-    resize: vertical;
-    min-height: 100px;
-}
-button {
-    background-color: #7545ef;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1em;
-    transition: background-color 0.3s ease;
-}
-button:hover {
-    background-color: #e65c00;
-}
-.social-links {
-    margin-top: 30px;
-    text-align: center;
-}
 .social-icon {
-    display: inline-block;
-    margin: 0 10px;
-    font-size: 24px;
-    color: #ff6600;
-    transition: transform 0.3s ease;
-}
-.social-icon:hover {
-    transform: scale(1.2);
+    width: 24px; /* Adjust to the desired size */
+    height: auto; /* Maintains aspect ratio */
 }
 
-/* Responsive Design */
-@media (max-width: 768px) {
-    .top-menu {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    .top-menu ul {
-        flex-direction: column;
-        width: 100%;
-    }
-
-    .top-menu ul li {
-        margin-left: 0;
-        margin-top: 0.5rem;
-    }
-
-    .animatics-container,
-    .gallery-container {
-        flex-direction: column;
-    }
-
-    .video-menu,
-    .gallery-menu {
-        width: 100%;
-        margin-bottom: 1rem;
-    }
-
-    main {
-        margin-top: 8rem;
-    }
-}
 /* Footer */
-
-
 footer {
     background-color: #0357ab;
     color: #ecf0f1;
@@ -466,36 +356,18 @@ footer {
     left: 0;
     right: 0;
     width: 100%;
-    z-index: 1000;
-    padding-top: 0;
-    padding-bottom: 0;
-    font-size: 0.9rem; /* Adjust the font size for smaller text */
-
+    font-size: 0.9rem;
+    z-index: 1001;
 }
 
-footer p {
-    display: inline-block; /* Ensure the text and icons are inline */
+body {
     margin: 0;
     padding: 0;
-    line-height: 1.5;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
-.social-links {
-    display: inline-block; /* Makes social links appear inline with the text */
-    margin-left: 10px; /* Adds space between the text and the icons */
-}
-
-.social-links a {
-    margin: 0 5px; /* Spacing between icons */
-}
-
-.social-icon {
-    width: 20px; /* Adjust the icon size */
-    height: 20px;
-    vertical-align: middle; /* Align the icons with the text */
-    transition: transform 0.3s ease;
-}
-
-.social-icon:hover {
-    transform: scale(1.1); /* Slight scaling on hover */
+main {
+    flex: 1;
 }
